# slimDeformation

./: .gitmodules  CMakeLists.txt  README.md  slimMatlab.cpp
matlab/: slim.m  slim.mexw64
